<resources>
    <string name="app_name">Calonex LLC</string>
    <string name="app_permission">App Permissions</string>
    <string name="tag_permission">This app needs permissions.</string>
    <string name="grant">Grant</string>
    <string name="tag_package">Package</string>
    <string name="ok">Okay</string>
    <string name="password">Password</string>
    <string name="current_password">Current Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="tag_sign">Don\'t have an account?&#160;&#160;<b><font color='#1474CC'>Sign Up Now</font></b></string>
    <string name="or">Or</string>
    <string name="tag_touch">Login with Touch ID</string>
    <string name="title_biometric">Calonex Application</string>
    <string name="sub_title_biometric">Login With Touch ID</string>
    <string name="biometric_desc">Use your Touch ID for Faster and easier Access to your account.</string>
    <string name="alert">Alert</string>
    <string name="msg_biometric">For first time you have to enter the credentials manually.</string>
    <string name="on_success">On Success</string>
    <string name="success">Success</string>
    <string name="on_fail">On Failure</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="forgot_paswrd">Forgot  Password!</string>
    <string name="email_add">Email Address</string>
    <string name="name">Name</string>
    <string name="viewLease">View Lease Specification</string>
    <string name="view">View</string>
    <string name="chng_paswrd">Change Password</string>
    <string name="send_email">Send Email</string>
    <string name="chat">Chat</string>
    <string name="properties">Properties</string>
    <string name="profile">Profile</string>
    <string name="personal_info">Personal Information</string>
    <string name="payments">Payments</string>
    <string name="pay_rent">Pay Rent</string>
    <string name="make_payment">Make Payment</string>
    <string name="rate_building">Rate Your Building</string>
    <string name="payment_setting">Payment Setting</string>
    <string name="payment_history">Payment History</string>
    <string name="pay_security">Pay Security</string>
    <string name="pay">Pay</string>
    <string name="settings">Settings</string>
    <string name="my_properties">Properties</string>
    <string name="your_responsibility">Your Responsibilities</string>
    <string name="add_property">Add Property</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="rent_distribution">Rent Distribution</string>
    <string name="rent_amount">Rent Amount</string>
    <string name="deep_link_prifix">/android</string>
    <string name="rent_info">Rent Info</string>
    <string name="payment_method">Payment Method</string>
    <string name="rent_percent">Rent %</string>
    <string name="rent_per_month">Rent Per Month</string>
    <string name="try_again">No Data Found</string>
    <string name="no_payment">No Payment History Found</string>
    <string name="tag_tenant_req">Tenant Request (0)</string>
    <string name="ytd_revenue">YTD&#160;Revenue</string>
    <string name="ytd_amt">$0.00</string>
    <string name="total_units">Total Units</string>
    <string name="units_occupied">Units Occupied</string>
    <string name="na">N/A</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="cx_msg">CX Messaging</string>
    <string name="cx_id">CX ID</string>
    <string name="strt_new_conversation">Start New Conversation</string>
    <string name="msg">Message</string>
    <string name="snd_msg">Send Message</string>
    <string name="priority">Priority</string>
    <string name="nrml">Normal</string>
    <string name="attnsn">Emergency</string>
    <string name="urgnt">Urgent</string>
    <string name="status">Status</string>
    <string name="both">Both</string>
    <string name="send_me">Send me more information on Calonex time to time</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="clr_filtr">Clear Filters</string>
    <string name="hint_msg">Type a message</string>
    <string name="calonex_tenants">Calonex Tenants</string>
    <string name="property_id">Property ID :</string>
    <string name="abt_proprty">About Property</string>
    <string name="building_features">Building Features</string>
    <string name="parking">Parking</string>
    <string name="property_expenses">Property Expenses</string>
    <string name="broker_contact">Broker Contact</string>
    <string name="brker__id_tag">Please enter Broker/Agent license ID to fetch their respective details.</string>
    <string name="billing_agent_id">Broker/Agent license ID</string>
    <string name="primary_contact">Primary Contact</string>
    <string name="licence_id">License ID#</string>
    <string name="only_id">ID#</string>
    <string name="property_lease_doc">Property Lease Documents</string>
    <string name="tenant_nme">Tenant Name</string>
    <string name="lst_paymnt">Last Payment</string>
    <string name="rent_due">Rent Due</string>
    <string name="paymnt_due">Payment Due</string>
    <string name="unit_type">"Unit type "</string>
    <string name="squr_ft_ar">Square Foot Area</string>
    <string name="rent_month">Rent Per Month($)</string>
    <string name="yearly_increase">Increase Per Year %(if any)</string>
    <string name="application_fee">Application Fee $ (if any)</string>
    <string name="bathrum_type">Bathroom Type</string>
    <string name="add_new_property">Add New Property</string>
    <string name="property_description">Property Description</string>
    <string name="building_add">Building Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="dummy">Dummy Value</string>
    <string name="zip">Zip Code</string>
    <string name="description">Description</string>
    <string name="property_imgs">Property Images</string>
    <string name="lease_docs">Lease Documents</string>
    <string name="save">Save</string>
    <string name="image">Image</string>
    <string name="file">File</string>
    <string name="done">Done</string>
    <string name="late_fee">Late fee after Due Date ($)</string>
    <string name="late_fee2">Late fee ($)</string>
    <string name="late_fee_after_due_date">Late Fee After Due Date($)</string>
    <string name="tenant_first_name">Tenant First Name</string>
    <string name="first_name">First Name</string>
    <string name="ssn">SSN</string>
    <string name="tenant_middle_name">Tenant Middle Name</string>
    <string name="tenant_last_name">Tenant Last Name</string>
    <string name="last_name">Last Name</string>
    <string name="tenant_email">Tenant Email</string>
    <string name="tenant_name_n_email">Tenant Name &amp; Email</string>
    <string name="tenant_phone">Tenant Phone</string>
    <string name="phone">Phone No</string>
    <string name="lease_specs">Lease Specification</string>
    <string name="lease">Lease</string>
    <string name="tenant_details">Tenant Details</string>
    <string name="back">Back</string>
    <string name="broker_nm">Broker Name</string>
    <string name="broker_phn">Broker Phone</string>
    <string name="broker_email">Broker Email</string>
    <string name="next">Next</string>
    <string name="lease_agree_heading">The Landlord and Tenant agree to lease the Apartment month–to–month at the Rent stated on these terms:</string>
    <string name="tag_confirm_tenant_property">Please verify property detail to continue \nand complete the registration process.</string>
    <string name="tag_verify_tenant_details">Please verify the details added by landlord/broker/agent and add the remaining details and upload documents</string>
    <string name="property_detail">Property Detail</string>
    <string name="landlord_approval">Landlord Approval: </string>
    <string name="tag_verfication">Add your mobile number to receive a 4 digit \nverification code.</string>
    <string name="tag_otp">Add the 4 digit verification code below to \nverify your mobile number and access your \nlease aggreement</string>
    <string name="tag_digit">Add 4 digit verification code</string>
    <string name="tag_otp_resend">Didn\'t receive the code? </string>
    <string name="resend"><u>Resend</u></string>
    <string name="mob_no">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="unit_no">Unit Number</string>
    <string name="unit_num">Unit No :&#160;</string>
    <string name="address">Address</string>
    <string name="current_address">Current Address</string>
    <string name="add">ADD</string>
    <string name="unit_desc">Unit Description</string>
    <string name="finish">Finish</string>
    <string name="square_footage">Square Footage</string>
    <string name="add_new_unit">Add Unit</string>
    <string name="unit_feature">Unit Features</string>
    <string name="unit_utility">Unit Utilities</string>
    <string name="unit_laundry">In-Unit Laundry</string>
    <string name="dish_washer">Dishwasher</string>
    <string name="air_condition">Air Condition</string>
    <string name="furnished">Furnished</string>
    <string name="utility_include">Utilities Included</string>
    <string name="ld_cover_expense">(Landlord covers Expenses)</string>
    <string name="heat">Heat</string>
    <string name="water">Water</string>
    <string name="cable">Cable</string>
    <string name="internet">Internet</string>
    <string name="security_deposit">Security Deposit ($)</string>
    <string name="service_fee">Service Fee</string>
    <string name="months_free">Months Free</string>
    <string name="rent_before_due_date">Rent if paid before due date</string>
    <string name="upload_pic">Upload Picture</string>
    <string name="upload_lease_doc">Upload Lease Document</string>
    <string name="upload_profile_pic">Upload Profile Picture</string>
    <string name="upload_doc">Upload Lease Document</string>
    <string name="upload_void_check">Upload Void Check</string>
    <string name="building_type">Building Type</string>
    <string name="abt_info">About Info</string>
    <string name="phn_no">Phone Number</string>
    <string name="driving_licence">Driver License Number</string>
    <string name="driver_licence">Driver License</string>
    <string name="doc_upload">Uploaded Document</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Session expired due to User inactivity for 5 minutes. Want to logout ?</string>
    <string name="property_address">Property Address :</string>
    <string name="request_by">Request By</string>
    <string name="property_link_req">Property Link Request</string>
    <string name="add_as_property">Add as New Property</string>
    <string name="onboarding_tenants">Onboarding Tenants</string>
    <string name="tenant">Tenant</string>
    <string name="tenants">Tenants</string>
    <string name="co_tenant">Co-Tenant</string>
    <string name="co_signer">Co-Signer</string>
    <string name="lease_specification">Lease Specification</string>
    <string name="rent_prcnt">Rent (%)</string>
    <string name="amnt">Amount</string>
    <string name="security_amt">Security Amount</string>
    <string name="security_rtrn">Security Return</string>
    <string name="refnd_amt">Refund Amount</string>
    <string name="refnd_cmnt">Refund Comment</string>
    <string name="tenant_list_note">* Signifies that the added tenant is Primary Tenant</string>
    <string name="link_tag">Please confirm the address by adding as new property.</string>
    <string name="link_property">Link Property</string>
    <string name="text_tenants">Co-Signer</string>
    <string name="text_tenant_title">Tenants</string>
    <string name="text_rent_percentage_title">Rent (in%)</string>
    <string name="text_amount_title">Amount ($)</string>
</resources>