<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">



        <TextView
            android:id="@+id/txt_title"
            style="@style/medium_poppins_text_match"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:text="@string/property_link_req"
            android:padding="@dimen/_8sdp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"/>


    <LinearLayout
        android:layout_below="@+id/txt_title"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_16sdp"
        android:layout_height="wrap_content">

    <TextView
        style="@style/small_text_match"
        android:text="@string/property_address"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/black_trans" />

    <TextView
        android:id="@+id/txt_link_add"
        style="@style/medium_poppins_text_match"
        android:text="@string/na"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/black"/>

        <TextView
            style="@style/small_text_match"
        android:text="@string/request_by"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/black_trans" />


    <TextView
        android:id="@+id/txt_link_email"
        style="@style/medium_poppins_text_match"
        android:text="@string/na"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txt_link_tag"
        style="@style/medium_poppins_text_match"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/link_tag"
        android:textColor="@color/black_trans"/>

    <Button
        android:id="@+id/btn_new_property"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_border"
        android:text="@string/add_as_property"
        android:textColor="@color/white" />



    <Spinner
        android:id="@+id/spinner_exist_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_marginTop="@dimen/_12sdp"/>
        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:background="@color/colorLtBlk" />
        <Button
            android:id="@+id/btn_link_req"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_border"
            android:text="@string/link_property"
            android:textColor="@color/white"
            android:visibility="gone"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_link"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
</RelativeLayout>