<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        style="@style/xsmall_poppins_text_match"
        android:text="@string/security_rtrn"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/_4sdp"
        android:padding="@dimen/_5sdp"/>
<EditText
    style="@style/vsmall_poppins_text_match"
    android:visibility="gone"/>
    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="@dimen/_2sdp"
        android:weightSum="4">


        <TextView
            style="@style/vvsmall_poppins_text_match"
            android:layout_weight="0.8"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/tenants"
            android:padding="@dimen/_2sdp"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            style="@style/vvsmall_poppins_text_match"
            android:layout_weight="1.05"
            android:padding="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/security_amt"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            style="@style/vvsmall_poppins_text_match"
            android:layout_weight="1.1"
            android:padding="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/refnd_amt"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            style="@style/vvsmall_poppins_text_match"
            android:layout_weight="1.05"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/refnd_cmnt"
            android:textColor="@android:color/white" />




    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_refund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:padding="@dimen/_2sdp"/>
</LinearLayout>
