<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tenant_name"
            style="@style/vvsmall_poppins_text_wrap"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_tenant_title" />

        <TextView
            android:id="@+id/tv_rent_percentage"
            style="@style/vvsmall_poppins_text_wrap"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_rent_percentage_title" />

        <TextView
            android:id="@+id/tv_rent_amount"
            style="@style/vvsmall_poppins_text_wrap"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_amount_title" />

        <TextView
            android:id="@+id/tv_co_signer"
            style="@style/vvsmall_poppins_text_wrap"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_tenants" />
    </LinearLayout>

    <View
        android:id="@+id/view_separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#E8F4FF" />
</LinearLayout>